Fixes #240